--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,8 +1,8 @@
 PORT = 4000 
 
-MONGO_URI = mongodb+srv://dharmjat45dj:<db_password>@personalportfolio.ldobm.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb://127.0.0.1:27017
 
-PORTFOLIO_URL = https://dharm-singh-portfolio.netlify.app
+PORTFOLIO_URL = http://localhost:5174
 
 DASHBOARD_URL = http://localhost:5173
 
