--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000 
 
-MONGO_URI = mongodb://127.0.0.1:27017
+MONGO_URI = mongodb+srv://dharmjat45dj:oo3lTwIq5XupySGi@personalportfolio.ldobm.mongodb.net/?retryWrites=true&w=majority&appName=personalportfolio
 
 PORTFOLIO_URL = http://localhost:5174
 
@@ -25,3 +25,4 @@ SMTP_PASSWORD = vokd qjja uqvx hyjh
 
 
 
+mongodb+srv://dharmjat45dj:7pRQbKN270raosPS@personalportfolio.ldobm.mongodb.net/?retryWrites=true&w=majority
